<resources>
    <string name="app_name">Intent App</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="DataActivity_text">Name : DicodingAcademy Bryan Rafsanzani, Your Age : 5</string>
    <string name="MoveActivity_text">Move Activity</string>
    <string name="ObjectActivity_text">Name: Bryan Rafsanzani, \n Email: bryanrafsanzani46@gmail.com, \n Age: 21, \n Location: Bandung</string>
    <string name="btn_pilih">pilih</string>
    <string name="ResultActivity_text">Pilih angka yang kamu suka</string>


</resources>
