<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultActivity_text"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50"/>

        <RadioButton
            android:id="@+id/radio_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_100"/>

        <RadioButton
            android:id="@+id/radio_150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_150"/>

        <RadioButton
            android:id="@+id/radio_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_200"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_pilih"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pilih"
        />

</LinearLayout>