<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <Button
       android:id="@+id/btn_MoveActivity"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:text="@string/move_activity"/>

   <Button
       android:id="@+id/btn_DataActivity"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:text="@string/move_with_data"/>

   <Button
       android:id="@+id/btn_ObjectActivity"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:text="@string/move_with_object"/>

   <Button
       android:id="@+id/btn_DialNumberActivity"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:text="@string/dial_number"/>

   <Button
       android:id="@+id/btn_ResultActivity"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/activity_vertical_margin"
       android:text="@string/move_with_result"/>

   <TextView
       android:id="@+id/txt_result"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/result_from_activity"
       android:textSize="24sp"
       android:gravity="center_horizontal"/>
</LinearLayout>